udpates and final harmony submission

--- a/tools_jailbreak_simple.ipynb
+++ b/tools_jailbreak_simple.ipynb
@@ -18,6 +18,14 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "id": "8ad35d57",
+   "metadata": {},
+   "source": [
+    "## setup"
+   ]
+  },
+  {
    "cell_type": "code",
    "execution_count": 1,
    "id": "b32e4f85",
